[package]
name = "tinyboot-virt_riscv64-os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tinyboot"
path = "src/boot.rs"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
riscv-rt = { version = "0.11.0", features = ["s-mode"] }
